# final_usv

./: CMakeLists.txt  package.xml  setup.py
env-hooks/: gz_sim_resource_path.sh
final_project/: obstacle.py  vel_pub.py
launch/: gz_bridge_launch.py  simulation.launch.py
models/box_usv/: model.config  model.sdf
scripts/: red_circle_avoider.py
worlds/: my_world.sdf
